--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-amplify": "^5.0.11",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "sass": "^1.57.1",
